<resources>
    <string name="app_name">Sport GPS</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_reset">Reset</string>
    <string name="action_share">Share</string>
    <string name="menu_map_zoom_fittrack">Zoom to fit track</string>
    <string name="menu_map_type">Map Type...</string>
    <string name="menu_map_type_normal">Normal</string>
    <string name="menu_map_type_hybrid">Hybrid</string>
    <string name="menu_map_type_satellite">Satellite</string>
    <string name="menu_map_type_terrain">Terrain</string>
    <string name="menu_map_type_none">None</string>
</resources>
